Fix z-index for dialog

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -3083,3 +3083,7 @@ body .theme-header {
         color: #fff !important;
     }
 }
+
+.ui-dialog.ui-widget {
+    z-index: 1000;
+}
